--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">49,242</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite to test logging</th></tr>
+<tr><td><a href="#t0">Test Logging</a></td><td class="num">0</td><td class="num attn">1</td><td class="num attn">2</td><td class="num">510</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.qa.test.GmailHomeTest</td><td><a href="#m0">loginNsendMail</a></td><td rowspan="2">1566805415158</td><td rowspan="2">6915</td></tr><tr class="passedeven"><td><a href="#m1">loginNsendMail</a></td></tr><tr class="passedeven"><td><a href="#m2">verifyTitleOfGmailLoginPage</a></td><td rowspan="1">1566805425999</td><td rowspan="1">6</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite to test logging</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Logging &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.qa.test.avc</td><td><a href="#m0">getData</a></td><td rowspan="1">1567340611692</td><td rowspan="1">3</td></tr><tr class="failedeven"><td><a href="#m1">verify</a></td><td rowspan="1">1567340611354</td><td rowspan="1">22</td></tr><tr><th colspan="4">Test Logging &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.qa.test.avc</td><td><a href="#m2">print</a></td><td rowspan="1">1567340611685</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.qa.test.GmailHomeTest#loginNsendMail</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>swati.kandwal@gmail.com</td><td>Email to swat</td><td>Body1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.qa.test.GmailHomeTest#loginNsendMail</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>swati.kandwal1@gmail.com</td><td>Email to swati1</td><td>Body2</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.qa.test.GmailHomeTest#verifyTitleOfGmailLoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Logging</h2><h3 id="m0">com.qa.test.avc#getData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Data does not match------------ expected [true] but found [false]
+	at com.qa.test.avc.getData(avc.java:34)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.qa.test.avc#verify</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.qa.test.avc.verify(avc.java:21)
+... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.qa.test.avc#print</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method avc.print()[pri:0, instance:com.qa.test.avc@4be29ed9] depends on not successfully finished methods
+... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
