--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e7986">  <td>19/08/25 15:00:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;GmailHomeTest.setUp()[pri:0, instance:com.qa.test.GmailHomeTest@3ffc5af1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/08/25 15:00:56</td>   <td>21882</td> <td>&nbsp;</td><td title="&gt;&gt;GmailLoginTest.setUp()[pri:0, instance:com.qa.test.GmailLoginTest@29774679]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/08/25 15:01:05</td>   <td>30482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailLoginTest.loginToGmailTest()[pri:0, instance:com.qa.test.GmailLoginTest@29774679]">loginToGmailTest</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/08/25 15:01:18</td>   <td>43730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailLoginTest.verifyTitleOfLoginPage()[pri:0, instance:com.qa.test.GmailLoginTest@29774679]">verifyTitleOfLoginPage</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>19/08/25 15:01:18</td>   <td>43754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailHomeTest.loginNsendMail()[pri:0, instance:com.qa.test.GmailHomeTest@3ffc5af1]">loginNsendMail</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>19/08/25 15:01:49</td>   <td>74435</td> <td>&nbsp;</td><td title="&lt;&lt;GmailHomeTest.tearDown()[pri:0, instance:com.qa.test.GmailHomeTest@3ffc5af1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>19/08/25 15:01:49</td>   <td>74435</td> <td>&nbsp;</td><td title="&lt;&lt;GmailLoginTest.tearDown()[pri:0, instance:com.qa.test.GmailLoginTest@29774679]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/09/01 11:46:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="avc.verify()[pri:1, instance:com.qa.test.avc@5b275dab]">verify</td> 
+  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/09/01 11:46:36</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="avc.getData()[pri:3, instance:com.qa.test.avc@5b275dab]">getData</td> 
+  <td>main@701141022</td>   <td></td> </tr>
 </table>
